Added tabular A-bot

--- a/notebooks/tabular.ipynb
+++ b/notebooks/tabular.ipynb
@@ -33,22 +33,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vocab_size = 12\n",
-    "num_attributes = 4;"
+    "vocab_size = 8\n",
+    "num_attributes = 4\n",
+    "num_actions = 2;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
-    "atable = Array{Float64}(undef, num_attributes, num_attributes, vocab_size, vocab_size)\n",
-    "qtable = Array{Float64}(undef, vocab_size, vocab_size)\n",
+    "a_table = zeros(num_attributes, num_attributes, vocab_size+1, vocab_size+1, vocab_size)\n",
+    "q_table = zeros(vocab_size+1, vocab_size+1, num_attributes, num_attributes)\n",
+    "\n",
+    "a_visited = falses(num_attributes, num_attributes, vocab_size+1, vocab_size+1)\n",
+    "q_visited = falses(vocab_size+1, vocab_size+1)\n",
     "\n",
     "num_correct = 0;"
    ]
@@ -68,12 +72,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
     "for episode in 1:num_episodes\n",
-    "    a_state = [rand(1:4), rand(1:4), 0, 0]\n",
+    "    # Generate random attributes:\n",
+    "    a_state = [rand(1:4), rand(1:4), 1, 1]\n",
+    "    \n",
+    "    # A-Bot:\n",
+    "    for action in 1:num_actions\n",
+    "        tradeoff = rand() # exploration-exploitation\n",
+    "        if (tradeoff > epsilon) | ~a_visited[a_state[1], a_state[2], a_state[3], a_state[4]]\n",
+    "            # Explore:\n",
+    "            word = rand(1:vocab_size) + 1\n",
+    "            a_state[action+2] = word\n",
+    "        else\n",
+    "            # Exploit:\n",
+    "            options = a_table[a_state[1], a_state[2], a_state[3], a_state[4], :]\n",
+    "            word = argmax(options) + 1\n",
+    "            a_state[action+2] = word\n",
+    "        end\n",
+    "    end\n",
+    "    \n",
+    "    # Q-Bot:\n",
+    "    \n",
     "end"
    ]
   },
