Added task-and-talk loop

--- a/notebooks/tabular.ipynb
+++ b/notebooks/tabular.ipynb
@@ -154,10 +154,10 @@
     "function get_reward(a_state, q_state)\n",
     "    if a_state[1:2] == q_state[3:end]\n",
     "        return 1\n",
-    "#     elseif a_state[1] == q_state[3]\n",
-    "#         return -0.1\n",
-    "#     elseif a_state[2] == q_state[4]\n",
-    "#         return -0.1 \n",
+    "    elseif a_state[1] == q_state[3]\n",
+    "        return -0.1\n",
+    "    elseif a_state[2] == q_state[4]\n",
+    "        return -0.1\n",
     "    else\n",
     "        return -1\n",
     "    end\n",
@@ -173,7 +173,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Groundedness: 0.3605082232407657\n",
+      "Groundedness: 0.3157123610643314\n",
       "Accuracy: 1.0\n"
      ]
     }
@@ -208,12 +208,12 @@
     "    # Noisy Channel\n",
     "    first_utt = a_state[3]\n",
     "    second_utt = a_state[4]\n",
-    "    if (rand() > 0.9) & (episode < 15000)\n",
-    "        first_utt = rand(1:vocab_size)\n",
-    "    end\n",
-    "    if (rand() > 0.9) & (episode < 15000)\n",
-    "        second_utt = rand(1:vocab_size)\n",
-    "    end\n",
+    "#     if (rand() > 0.9) & (episode < 15000)\n",
+    "#         first_utt = rand(1:vocab_size)\n",
+    "#     end\n",
+    "#     if (rand() > 0.9) & (episode < 15000)\n",
+    "#         second_utt = rand(1:vocab_size)\n",
+    "#     end\n",
     "    \n",
     "    # Q-Bot:\n",
     "    q_state = [first_utt, second_utt, num_attributes+1, num_attributes+1]\n",
@@ -262,13 +262,6 @@
     "groundedness(final_a_states)\n",
     "println(\"Accuracy: \", total_rewards/num_exploits)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
