Attribute-value tabular Q-learning

--- a/notebooks/tasktalk.ipynb
+++ b/notebooks/tasktalk.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "get_reward (generic function with 2 methods)"
+       "get_reward (generic function with 1 method)"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,28 +115,29 @@
    "source": [
     "function get_reward(a_state, guess, num_task)\n",
     "    reward = -1\n",
+    "    revguess = reverse(guess)\n",
     "    if (num_task == 1)\n",
-    "        if (a_state[1:2] == guess)\n",
+    "        if (a_state[1:2] == guess) | (a_state[1:2] == revguess)\n",
     "            reward = 1\n",
     "        end\n",
     "    elseif (num_task == 2)\n",
-    "        if (a_state[2:3] == guess)\n",
+    "        if (a_state[2:3] == guess) | (a_state[2:3] == revguess)\n",
     "            reward = 1\n",
     "        end\n",
     "    elseif (num_task == 3)\n",
-    "        if ([a_state[1], a_state[3]] == guess)\n",
+    "        if ([a_state[1], a_state[3]] == guess) | ([a_state[1], a_state[3]] == revguess)\n",
     "            reward = 1\n",
     "        end\n",
     "    elseif (num_task == 4)\n",
-    "        if ([a_state[2], a_state[1]] == guess)\n",
+    "        if ([a_state[2], a_state[1]] == guess) | ([a_state[2], a_state[1]] == revguess)\n",
     "            reward = 1\n",
     "        end\n",
     "    elseif (num_task == 5)\n",
-    "        if ([a_state[3], a_state[2]] == guess)\n",
+    "        if ([a_state[3], a_state[2]] == guess) | ([a_state[3], a_state[2]] == revguess)\n",
     "            reward = 1\n",
     "        end\n",
     "    else\n",
-    "        if ([a_state[3], a_state[1]] == guess)\n",
+    "        if ([a_state[3], a_state[1]] == guess) | ([a_state[3], a_state[1]] == revguess)\n",
     "            reward = 1\n",
     "        end\n",
     "    end\n",
@@ -156,14 +157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9764066142279428\n"
+      "Accuracy: 0.9827376600926528\n"
      ]
     }
    ],
@@ -290,13 +291,6 @@
     "end\n",
     "println(\"Accuracy: \", total_rewards/num_exploits)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
