Memoryless tabular A-bot (not working)

--- a/notebooks/tasktalk.ipynb
+++ b/notebooks/tasktalk.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "q_vocab = 3\n",
-    "a_vocab = 12\n",
+    "a_vocab = 4\n",
     "\n",
     "num_tasks = 6\n",
     "num_attributes = 4;"
@@ -55,18 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# A-State: [att * att, q_vocab, a_vocab+1, q_vocab+1] (+1 for empty vocab)\n",
     "# Q-State (Utterance): [task, q_vocab+1, a_vocab+1] (+1 for empty vocab)\n",
     "# Q-State (Guess): [task, q_vocab, a_vocab, q_vocab, a_vocab]\n",
-    "a_table = zeros(num_attributes, num_attributes, num_attributes, q_vocab, a_vocab+1, q_vocab+1, a_vocab)\n",
+    "a_table = zeros(num_attributes, num_attributes, num_attributes, q_vocab, a_vocab)\n",
     "q_table_utt = zeros(num_tasks, q_vocab+1, a_vocab+1, q_vocab)\n",
     "q_table_guess = zeros(num_tasks, q_vocab, a_vocab, q_vocab, a_vocab, num_attributes, num_attributes)\n",
     "\n",
-    "a_visited = falses(num_attributes, num_attributes, num_attributes, q_vocab, a_vocab+1, q_vocab+1)\n",
+    "a_visited = falses(num_attributes, num_attributes, num_attributes, q_vocab)\n",
     "q_utt_visited = falses(num_tasks, q_vocab+1, a_vocab+1)\n",
     "q_guess_visited = falses(num_tasks, q_vocab, a_vocab, q_vocab, a_vocab)\n",
     "\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "get_reward (generic function with 1 method)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,17 +157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.9827376600926528\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_rewards = 0\n",
     "for episode in 1:num_episodes\n",
@@ -197,12 +189,12 @@
     "    \n",
     "    # A-BOT\n",
     "    #  -> TURN 1\n",
-    "    if explore | ~a_visited[a_state...]\n",
+    "    if explore | ~a_visited[a_state[1], a_state[2], a_state[3], a_state[4]]\n",
     "        # Explore:\n",
     "        a_state[5] = rand(1:a_vocab)\n",
     "    else\n",
     "        # Exploit:\n",
-    "        options = a_table[a_state[1], a_state[2], a_state[3], a_state[4], a_state[5], a_state[6], :]\n",
+    "        options = a_table[a_state[1], a_state[2], a_state[3], a_state[4], :]\n",
     "        a_state[5] = argmax(options)\n",
     "    end\n",
     "    \n",
@@ -228,12 +220,12 @@
     "    \n",
     "    # A-BOT\n",
     "    #  -> TURN 2\n",
-    "    if explore | ~a_visited[a_state...]\n",
+    "    if explore | ~a_visited[a_state[1], a_state[2], a_state[3], a_state[6]]\n",
     "        # Explore:\n",
     "        q_state[5] = rand(1:a_vocab)\n",
     "    else\n",
     "        # Exploit:\n",
-    "        options = a_table[a_state[1], a_state[2], a_state[3], a_state[4], a_state[5], a_state[6], :]\n",
+    "        options = a_table[a_state[1], a_state[2], a_state[3], a_state[6], :]\n",
     "        q_state[5] = argmax(options)\n",
     "    end\n",
     "    \n",
@@ -265,10 +257,10 @@
     "    # Update Reward Tables:\n",
     "    reward = get_reward(a_state, guess, q_state[1])\n",
     "    \n",
-    "    a_table[a_state[1],a_state[2],a_state[3],a_state[4],a_vocab+1, q_vocab+1, q_state[3]] += reward\n",
-    "    a_visited[a_state[1],a_state[2],a_state[3],a_state[4],a_vocab+1, q_vocab+1] = true\n",
-    "    a_table[a_state[1],a_state[2],a_state[3],a_state[4],a_state[5],a_state[6], q_state[5]] += reward\n",
-    "    a_visited[a_state[1],a_state[2],a_state[3],a_state[4],a_state[5],a_state[6]] = true\n",
+    "    a_table[a_state[1],a_state[2],a_state[3],a_state[4], q_state[3]] += reward\n",
+    "    a_visited[a_state[1],a_state[2],a_state[3],a_state[4]] = true\n",
+    "    a_table[a_state[1],a_state[2],a_state[3],a_state[6], q_state[5]] += reward\n",
+    "    a_visited[a_state[1],a_state[2],a_state[3],a_state[6]] = true\n",
     "    \n",
     "    q_table_utt[q_state[1],q_vocab+1, a_vocab+1, q_state[2]] += reward\n",
     "    q_utt_visited[q_state[1],q_vocab+1, a_vocab+1] = true\n",
