Added QBot in Pytorch

--- a/notebooks/tasktalk.ipynb
+++ b/notebooks/tasktalk.ipynb
@@ -157,9 +157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: -0.752059570995099\n"
+     ]
+    }
+   ],
    "source": [
     "total_rewards = 0\n",
     "for episode in 1:num_episodes\n",
